--- a/about.html
+++ b/about.html
@@ -120,24 +120,24 @@
                         role: "Member",
                         studentId: "23130277",
                         hobbies: "Play volleyball,...",
-                        profileUrl: "https://xuni-dizan.github.io/Trang_ca_nhan/index.html",
+                        profileUrl: "",
                         imageUrl: "img/son.jpg",
                         email: "23130277@st.hcmuaf.edu.vn",
-                        portfolioUrl: "https://xuni-dizan.github.io/Trang_ca_nhan/index.html",
-                        facebookUrl: "https://www.facebook.com/xuni.dizan",
-                        githubUrl: "https://github.com/Xuni-Dizan"
+                        portfolioUrl: "",
+                        facebookUrl: "",
+                        githubUrl: ""
                     },
                     {
                         name: "Nguyễn Thị Thuỷ Linh",
                         role: "Member",
                         studentId: "23130171",
                         hobbies: "listening to music,...",
-                        profileUrl: "https://nguyentuan2005.github.io/NguyenVoQuocTuan-23130370-HCI/",
+                        profileUrl: "https://tl-1279.github.io/TL-1279/",
                         imageUrl: "img/linh.jpg",
                         email: "23130171@.hcmuaf.edu.vn",
-                        portfolioUrl: "https://nguyentuan2005.github.io/NguyenVoQuocTuan-23130370-HCI/",
-                        facebookUrl: "https://www.facebook.com/profile.php?id=100040384152520",
-                        githubUrl: "https://github.com/NguyenTuan2005"
+                        portfolioUrl: "https://tl-1279.github.io/TL-1279/",
+                        facebookUrl: "",
+                        githubUrl: "https://github.com/TL-1279/TL-1279"
                     },
                     {
                         name: "Cao Sơn Hào",
@@ -156,12 +156,12 @@
                         role: "Member",
                         studentId: "22130151",
                         hobbies: "social clubs,...",
-                        profileUrl: "https:/ithub.io/hci2425/",
+                        profileUrl: "",
                         imageUrl: "img/long.jpg",
                         email: "22130151@st.hcmuaf.edu.vn",
-                        portfolioUrl: "https://.github.io/hci2425/",
-                        facebookUrl: "#facebook-profile",
-                        githubUrl: "https://github.com/"
+                        portfolioUrl: "",
+                        facebookUrl: "",
+                        githubUrl: ""
                     }
                 ];
 
