--- a/about.html
+++ b/about.html
@@ -108,12 +108,12 @@
                         role: "Leader",
                         studentId: "23130239",
                         hobbies: "Play badminton,...",
-                        profileUrl: "https://duyhuunguyen.github.io/GTNM/",
+                        profileUrl: "",
                         imageUrl: "img/phu.jpg",
                         email: "23130239@st.hcmuaf.edu.vn",
-                        portfolioUrl: "https://duyhuunguyen.github.io/GTNM/",
+                        portfolioUrl: "",
                         facebookUrl: "https://www.facebook.com/ngocquy.ho.900",
-                        githubUrl: "https://github.com/DuyHuuNguyen"
+                        githubUrl: ""
                     },
                     {
                         name: "Đinh Văn Son",
